# CookieGUARD

./: .gitignore  REPOSITORY_ANALYSIS.md  TECHNICAL_IMPLEMENTATION.md  background.js  content-script.js  diyrigent-analytics.js  diyrigent-optimization-konzept.md  diyrigent-website-template.html  guardian-overlay.css  manifest.json  package-lock.json  package.json  popup.css  popup.html  popup.js
archetypen_voice_web/: .gitignore  HEADER_CUSTOMIZATION_README.md  README.md  boston_dynamics_clone.html  complete.html  download.html  index.html  index_mvp1_enhanced.html  pyproject.toml  render-complete.html  requirements.txt  schmiede.html  styles.css  test_gui_manual.py  transcript.html  upload_tool.py
archetypen_voice_web/.github/workflows/: ci.yml  test_gui.yml
archetypen_voice_web/clone_brief_builder/: __init__.py  __main__.py  cli.py  crawler.py  gui.py  main.py  metadata.py
archetypen_voice_web/mein_snapshot/: metadata.json
archetypen_voice_web/mock_api/: api_calls.json
archetypen_voice_web/reports/: iteration-1-tests.md
archetypen_voice_web/snapshot/: index.html  metadata.json
archetypen_voice_web/snapshot/assets/css/: main.built.css
archetypen_voice_web/snapshot/assets/js/: main.built.js
archetypen_voice_web/tests/: conftest.py  test_cli.py  test_crawler.py  test_gui.py  test_gui_automation.py  test_metadata.py
cookiequitter-extension/: README.md  background.js  manifest.json  popup.css  popup.html  popup.js  test-connection.html  test-extension.html  test-popup.html
src/adapters/: anthropicAdapter.js  cursorAdapter.js  googleAdapter.js  openaiAdapter.js
src/main/: main.js  preload.js
src/renderer/: app.js  index.html
src/renderer/components/: agents.js  chat.js  projects.js
src/renderer/styles/: agents.css  chat.css  main.css
src/renderer/utils/: api.js
src/services/: agentRegistry.js  chatOrchestrator.js
