[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "clone-brief-builder"
version = "0.1.0"
description = "CLI and GUI to create a Claude briefing template for website clones with headless browser support"
authors = [{name = "Narion2025", email = "narion2025@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["web scraping", "claude", "briefing", "website cloning", "headless browser"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "html5lib>=1.1",
    "playwright>=1.40.0",
    "aiofiles>=23.0.0",
    "aiohttp>=3.9.0",
]

[project.urls]
Homepage = "https://github.com/Narion2025/web-clone"
Repository = "https://github.com/Narion2025/web-clone"
Issues = "https://github.com/Narion2025/web-clone/issues"

[project.scripts]
clone-brief = "clone_brief_builder.cli:main"
clone-brief-gui = "clone_brief_builder.gui:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-playwright>=0.4.0",
    "black>=23.7.0",
    "flake8>=6.1.0",
    "mypy>=1.4.0",
    "types-requests>=2.31.0",
    "types-beautifulsoup4>=4.12.0",
]

[tool.setuptools]
packages = ["clone_brief_builder"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=clone_brief_builder --cov-report=term-missing"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["clone_brief_builder"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true 